# bedrock-agent

./: .gitignore  pyproject.toml
openapi/: lambda_openapi_schema.yaml
source/: __init__.py  invoke_cloud_agent.py  run_agent.py
source/common/: logger_setup.py
tests/: test_invoke_cloud_agent.py  test_run_agent.py
