[project]
name = "bedrock-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.38.7",
    "uuid>=1.30",
]

# Specify the build system
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Configure package discovery
[tool.hatch.build.targets.wheel]
packages = ["source"]

# Optional: Configure development dependencies
[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "black",
    "isort",
]
